--- a/app/views/songs/edit.erb
+++ b/app/views/songs/edit.erb
@@ -6,7 +6,7 @@
 
   <br></br>
 
-  <input type="text" name="artist_name" id="Artist Name">
+  <input type="text" name="artist_name" id="Artist Name" value="<%=@song.artist.name%>">
 
   <br></br>
 
